fix pokemon details line height when wrapping

--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -43,6 +43,7 @@
       }
       .name { 
         font-size: 3em;
+        line-height: 28px;
         transform: translateX(-2px); 
       }
       .genus { 
